--- a/bundles/core/pom.xml
+++ b/bundles/core/pom.xml
@@ -19,6 +19,17 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
+                <configuration>
+                    <instructions>
+                        <!--
+                            The Sling-Model-Packages header is required for Sling models
+                            (using the @Model annotation) to get picked up.
+                        -->
+                        <Sling-Model-Packages>
+                            net.distilledcode.aem.samples.models
+                        </Sling-Model-Packages>
+                    </instructions>
+                </configuration>
             </plugin>
 
             <!-- activate the maven-scr-plugin, including its configurations from the parent -->
@@ -53,8 +64,23 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.jcr</groupId>
+            <artifactId>jcr</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.sling</groupId>
+            <artifactId>org.apache.sling.models.api</artifactId>
         </dependency>
 
     </dependencies>
